force-app/main/default/objects/BrillioFC__Visualforce_Page__c/BrillioFC__Visualforce_Page__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Visualforce Page</label>
    <nameField>
        <label>ForceClinic Visualforce Page  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Visualforce Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>