force-app/main/default/objects/BrillioFC__Visualforce_Page__c/fields/BrillioFC__API_Version__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__API_Version__c</fullName>
    <label>API Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>