force-app/main/default/objects/BrillioFC__Visualforce_Page__c/fields/BrillioFC__Controller_Type__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Controller_Type__c</fullName>
    <label>Controller Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>