force-app/main/default/objects/BrillioFC__Visualforce_Page__c/fields/BrillioFC__ControllerKey__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ControllerKey__c</fullName>
    <label>ControllerKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>