force-app/main/default/objects/BrillioFC__Visualforce_Page__c/fields/BrillioFC__isAvailableInTouch__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isAvailableInTouch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAvailableInTouch</label>
    <type>Checkbox</type>
</CustomField>