force-app/main/default/objects/BrillioFC__Visualforce_Page__c/fields/BrillioFC__IsConfirmationTokenRequired__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__IsConfirmationTokenRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConfirmationTokenRequired</label>
    <type>Checkbox</type>
</CustomField>