force-app/main/default/objects/BrillioFC__Visualforce_Page__c/fields/BrillioFC__Namespace__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Namespace__c</fullName>
    <label>Namespace</label>
    <length>50</length>
    <type>Text</type>
</CustomField>